Sistemato errore di posizionamento su template prodotti, sia modifica che creazione

--- a/src/QwebCMS/CatalogoBundle/Resources/views/Product/new.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Product/new.html.twig
@@ -57,6 +57,8 @@
                                     {{ form_errors(form.indirizzo) }}
                                     {{ form_widget(form.indirizzo, {'attr': {'class': 'form-control'}}) }}
                                 </div>
+                            </div>
+                            <div class="col-lg-6">
                                 <div class="form-group">
                                     {{ form_label(form.coordinate, label|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
                                     {{ form_errors(form.coordinate) }}
