--- a/src/QwebCMS/CatalogoBundle/Resources/views/Product/update.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Product/update.html.twig
@@ -110,12 +110,10 @@
                                     </div>
                                 </div>
                                 <div class="form-group ">
-                                    <div>
-                                        {{ form_label(form.featurevalues, label|default(null) ,{'label_attr': {'class': 'control-label col-sm-12'}}) }}
-                                        {{ form_errors(form.featurevalues) }}
-                                        <div class="col-lg-12 m-l-n">
-                                            {{ form_widget(form.featurevalues, {'attr': {'class': ''}}) }}
-                                        </div>
+                                    {{ form_label(form.featurevalues, label|default(null) ,{'label_attr': {'class': 'control-label col-sm-12'}}) }}
+                                    {{ form_errors(form.featurevalues) }}
+                                    <div class="col-lg-12 m-l-n">
+                                        {{ form_widget(form.featurevalues, {'attr': {'class': 'form-control', 'multiple':'true'}}) }}
                                     </div>
                                 </div>
                             </div>
