Modifica etichette menu laterale

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -77,8 +77,8 @@
                             {% set currentPath = app.request.attributes.get('_route') %}
                             <li><a href="{{ path('products') }}">Prodotti</a></li>
                             <li><a href="{{ path('categories') }}">Categorie</a></li>
-                            <li><a href="{{ path('features') }}">Feature</a></li>
-                            <li><a href="{{ path('featurevalues') }}">Featurevalues</a></li>
+                            <li><a href="{{ path('features') }}">Categorie caratteristiche</a></li>
+                            <li><a href="{{ path('featurevalues') }}">Caratteristiche</a></li>
                         </ul>
                     </li>
                 </ul>
