--- a/src/QwebCMS/CatalogoBundle/Resources/views/Category/new.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Category/new.html.twig
@@ -37,7 +37,6 @@
 
                     <div id="tab-1" class="tab-pane active">
                         <div class="panel-body">
-
                             <div class="col-md-6">
                                 <div class="form-group">
                                     {{ form_label(form.title, label|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
@@ -49,7 +48,6 @@
                                     {{ form_errors(form.description) }}
                                     {{ form_widget(form.description, {'attr': {'class': 'form-control'}}) }}
                                 </div>
-
                                 <div class="form-group">
                                     {{ form_label(form.pub, label|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
                                     {{ form_errors(form.pub) }}
@@ -59,7 +57,6 @@
                                         </label>
                                     </div>
                                 </div>
-
                             </div>
                             <div class="col-lg-6">
                                 <div class="form-group">
@@ -71,7 +68,7 @@
                             <div class="col-lg-6">
                                 <div class="form-group">
                                     {{ form_errors(form.features) }}
-                                    {{ form_label(form.features, 'Categorie di caratteristiche'|default(null) ,{'label_attr': {'class': ''}}) }}
+                                    {{ form_label(form.features, 'Caratteristiche dei Prodotti Associati '|default(null) ,{'label_attr': {'class': ''}}) }}
                                     {{ form_widget(form.features, {'attr': {'class': 'col-lg-12', 'multiple':'true'}}) }}
                                 </div>
                             </div>
