--- a/src/QwebCMS/CatalogoBundle/Resources/views/Product/update.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Product/update.html.twig
@@ -4,10 +4,10 @@
 {% block title %}Modifica {{ product.title }}{% endblock %}
 
 {% block stylesheets %}
-    <link href="{{ asset('admin-style/css/plugins/summernote/summernote.css') }}" rel="stylesheet">
-    <link href="{{ asset('admin-style/css/plugins/summernote/summernote-bs3.css') }}" rel="stylesheet">
     <link href="{{ asset('assets/css/html5imageupload.css') }}" rel="stylesheet">
-    <link rel="stylesheet" href="{{ asset('admin-style/css/plugins/sweetalert/sweetalert.css') }}"/>
+    <link href="{{ asset('admin-style/css/plugins/sweetalert/sweetalert.css') }}" rel="stylesheet" />
+    <link href="{{ asset('admin-style/css/plugins/switchery/switchery.css') }}" rel="stylesheet">
+    <link href="{{ asset('admin-style/css/plugins/chosen/chosen.css') }}" rel="stylesheet">
 {% endblock %}
 
 {% block pagetitle %}
@@ -39,6 +39,24 @@
 
                     <div id="tab-1" class="tab-pane active">
                         <div class="panel-body">
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    {{ form_label(form.categories, 'Categoria'|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
+                                    {{ form_errors(form.categories) }}
+                                    <div class="input-group" style="width:100%;">
+                                        {{ form_widget(form.categories, {'attr': {'class': 'chosen-select', 'data-placeholder':'Scegli una categoria'}}) }}
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="form-group">
+                                    {{ form_label(form.pub, 'Pubblica'|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
+                                    {{ form_errors(form.pub) }}
+                                    <div>
+                                        {{ form_widget(form.pub, { 'attr': {'class': 'js-switch'} }) }}
+                                    </div>
+                                </div>
+                            </div>
                             <div class="col-lg-12">
                                 <div class="form-group">
                                     {{ form_label(form.title, 'Titolo / Nome immobile'|default(null) ,{'label_attr': {'class': 'control-label text-success'}}) }}
@@ -82,12 +100,14 @@
 
                             <div class="col-lg-4">
                                 <div class="form-group">
+                                    {#
                                     {{ form_label(form.planimetria, 'Planimetria'|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
                                     {{ form_errors(form.planimetria) }}
                                     {{ form_widget(form.planimetria, {'attr': {'class': 'form-control'}}) }}
                                     <div id="drop-planimetria" class="dropzone col-lg-12" action="#">
                                         <div class="dropzone-previews"></div>
                                     </div>
+                                    #}
                                 </div>
                             </div>
 
@@ -107,17 +127,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-lg-4">
-                                <div class="form-group">
-                                    {{ form_label(form.pub, 'Pubblica'|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
-                                    {{ form_errors(form.pub) }}
-                                    <div class="checkbox">
-                                        <label>
-                                            {{ form_widget(form.pub) }}
-                                        </label>
-                                    </div>
-                                </div>
-                            </div>
+
 
                             <div class="col-lg-4">
                                 <div class="form-group">
@@ -127,24 +137,24 @@
                                 </div>
                             </div>
 
+                            <div class="col-lg-6">
 
-                            <div class="col-lg-6">
-                                <div class="form-group">
-                                    {{ form_label(form.categories, 'Categorie'|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
-                                    {{ form_errors(form.categories) }}
-                                    <div>
-                                        {{ form_widget(form.categories, {'attr': {'class': 'form-control', 'multiple':'true'}}) }}
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
                                 <div class="form-group ">
                                     {{ form_label(form.featurevalues, 'Caratteristiche'|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
                                     {{ form_errors(form.featurevalues) }}
                                     <div>
-                                        {{ form_widget(form.featurevalues, {'attr': {'class': 'form-control', 'multiple':'true', 'style':'height:200px;'}}) }}
+                                        {{ form_widget(form.featurevalues, {'attr': {'class': 'form-control'}}) }}
                                     </div>
                                 </div>
+
+                                {#<div class="form-group">
+                                    <h3>Caratteristiche</h3>
+                                    <ul class="tags">
+                                        {% for featurevalue in form.featurevalues %}
+                                            <li>{{ form_widget(featurevalue, {'attr': {'class': 'form-control'}}) }}</li>
+                                        {% endfor %}
+                                    </ul>
+                                </div>#}
                             </div>
 
                         </div>
@@ -258,6 +268,12 @@
 
     <!-- Nestable List -->
     <script src="{{ asset('admin-style/js/plugins/nestable/jquery.nestable.js') }}"></script>
+
+    <!-- Switchery -->
+    <script src="{{ asset('admin-style/js/plugins/switchery/switchery.js') }}"></script>
+
+    <!-- Chosen -->
+    <script src="{{ asset('admin-style/js/plugins/chosen/chosen.jquery.js') }}"></script>
 
     <script>
         $(document).ready(function(){
@@ -398,6 +414,20 @@
                 $('#nestable').hide();
                 $('#chiudi-ordina-foto').hide();
             })
+
+            var elem = document.querySelector('.js-switch');
+            var switchery = new Switchery(elem, { color: '#1AB394' });
+
+            var config = {
+                '.chosen-select'           : {},
+                '.chosen-select-deselect'  : {allow_single_deselect:true},
+                '.chosen-select-no-single' : {disable_search_threshold:10},
+                '.chosen-select-no-results': {no_results_text:'Oops, nessun elemento trovato!'},
+                '.chosen-select'            : {width:"95%"}
+            }
+            for (var selector in config) {
+                $(selector).chosen(config[selector]);
+            }
         });
     </script>
     {{ tinymce_init() }}
